--- a/src/style.css
+++ b/src/style.css
@@ -20,10 +20,24 @@ body {
 	min-height: 100vh;
 }
 
+.highlighted {
+	color: #ccc;
+	background-color: #1a1a1a;
+}
+
 #app {
 	max-width: 1280px;
 	margin: 0 auto;
+}
+
+.text-center {
 	text-align: center;
+}
+
+.grid-2 {
+	column-gap: 2rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 }
 
 @media (max-width: 639px) {
@@ -36,5 +50,10 @@ body {
 	:root {
 		color: #ccc;
 		background-color: #1a1a1a;
+	}
+
+	.highlighted {
+		color: #222;
+		background-color: #ccc;
 	}
 }
