--- a/src/style.css
+++ b/src/style.css
@@ -38,19 +38,22 @@ body {
 
 .grid-2 {
   column-gap: 2rem;
+  row-gap: 2rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
 .control-string-box {
-  text-align: left;
-  border: 1px solid black;
-  padding: 0.5em;
   width: 100%;
   height: 10ch;
   overflow-y: scroll;
   overflow-wrap: break-word;
   word-break: break-all;
+}
+
+.content-box {
+  border: 1px solid black;
+  padding: 0.5rem;
 }
 
 @media (max-width: 639px) {
