--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
 
   color: #222;
   background-color: #ffffff;
+  scrollbar-color: #222 transparent;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -66,6 +67,7 @@ body {
   :root {
     color: #ccc;
     background-color: #1a1a1a;
+    scrollbar-color: #ccc transparent;
   }
 
   .highlighted {
